polished front end

--- a/dmv-app/app/globals.css
+++ b/dmv-app/app/globals.css
@@ -23,7 +23,7 @@
 
 
 body {
-  background-image: url('/Campus_Walkway.jpg'); /* Update with your image path */
+  background-image: url('/Galveston-Aerial.jpg'); /* Update with your image path */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
